# nnef-dists

./: .cursorrules  .gitignore  COMPARISON_FRAMEWORK_README.md  LICENSE  NOPROP_CT_README.md  NOPROP_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  comprehensive_model_comparison.py  improved_log_normalizer_comparison.py  plot_sinusoidal_embedding.py  plot_time_embeddings.py  pyproject.toml  requirements.txt  run_glow_architectures.py  setup.py  test_compatibility.py  test_config_models.py  test_convex_potential_flow.py  test_convex_resnet_direct.py  test_convex_resnet_factory.py  test_ct_fm.py  test_laplace_product_1d.py  test_syntax.py  train_gaussian_1d.py
configs/: gaussian_1d_large.yaml  gaussian_1d_medium.yaml  gaussian_1d_small.yaml  gaussian_moment_net.yaml  laplace_product_1d.yaml  multivariate_3d_large.yaml  multivariate_3d_medium.yaml  noprop_ct_comparison.yaml
docs/: geometric_flow_networks.md  log_normalizer_approach.md  quadratic_resnet_log_normalizer.md
examples/: normalization_example.py
plotting/: model_comparison.py
scripts/: README.md  __init__.py  compare_all_architectures.py  compare_log_normalizer_approaches.py  compare_noprop_ct.py  convert_to_tril.py  create_comparison_analysis.py  create_comparison_summary.py  deep_narrow_comparison.py  generate_normal_data.py  list_available_models.py  load_model_and_data.py  matrix_utils.py  plot_3d_results.py  plot_log_normalizer_predictions.py  plot_results.py  plot_training_results.py  run_comprehensive_model_comparison.py  run_diffusion_demo.py  run_division_aware_demo.py  run_simple_inn_demo.py  (+6 more)
(+276 files in other folders)
